# Trading_exchange

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  piccolo_conf.py  pytest.ini
src/api/v1/: auth.py
src/config/: piccolo_app.py  settings.py
src/models/: users.py
src/models/migrations/: default_2025_03_23t17_44_52_213224.py  default_2025_03_30t02_55_37_856061.py
src/services/: di.py  exceptions.py  types.py  users.py
src/services/auth/: login.py
src/tests/: conftest.py
src/tests/api/: test_registration.py
