[project]
name = "trading-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "mypy>=1.15.0",
    "mypy-baseline>=0.7.2",
    "pre-commit>=4.2.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.mypy]
strict = true